@@ -495,6 +495,17 @@ class CommandAction(_ActionAction):
             cmd = str(cmd)
         return env.subst_target_source(cmd, SUBST_SIG, target, source)
 
+    def get_implicit_deps(self, target, source, env):
+        from SCons.Subst import SUBST_SIG
+        cmd_list = env.subst_list(self.cmd_list, SUBST_SIG, target, source)
+        res = []
+        for cmd_line in cmd_list:
+            if cmd_line:
+                d = env.WhereIs(str(cmd_line[0]))
+                if d:
+                    res.append(env.fs.File(d))
+        return res
+
 class CommandGeneratorAction(ActionBase):
     """Class for command-generator actions."""
     def __init__(self, generator, *args, **kw):
@@ -541,6 +552,9 @@ class CommandGeneratorAction(ActionBase):
         since those parts don't affect signatures.
         """
         return self._generate(target, source, env, 1).get_contents(target, source, env)
+
+    def get_implicit_deps(self, target, source, env):
+        return self._generate(target, source, env, 1).get_implicit_deps(target, source, env)
 
 
 
@@ -717,6 +731,9 @@ class FunctionAction(_ActionAction):
         return contents + env.subst(string.join(map(lambda v: '${'+v+'}',
                                                      self.varlist)))
 
+    def get_implicit_deps(self, target, source, env):
+        return []
+
 class ListAction(ActionBase):
     """Class for lists of other actions."""
     def __init__(self, list):
@@ -759,6 +776,12 @@ class ListAction(ActionBase):
             if stat:
                 return stat
         return 0
+
+    def get_implicit_deps(self, target, source, env):
+        result = []
+        for act in self.list:
+            result.extend(act.get_implicit_deps(target, source, env))
+        return result
 
 class ActionCaller:
     """A class for delaying calling an Action function with specific
