@@ -37,6 +37,10 @@ import time
 
 test = TestSCons.TestSCons()
 
+CC = test.detect('CC')
+LINK = test.detect('LINK')
+if LINK is None: LINK = CC
+
 test.write('SConstruct', """
 env = Environment(OBJSUFFIX = '.ooo', PROGSUFFIX = '.xxx')
 env.Program('foo', Split('foo.c bar.c'))
@@ -78,11 +82,14 @@ stree = """
 [E     C  ]  | +-foo.c
 [E     C  ]  | +-foo.h
 [E     C  ]  | +-bar.h
+[E     C  ]  | +-%(CC)s
 [E B   C  ]  +-bar.ooo
-[E     C  ]    +-bar.c
-[E     C  ]    +-bar.h
-[E     C  ]    +-foo.h
-"""
+[E     C  ]  | +-bar.c
+[E     C  ]  | +-bar.h
+[E     C  ]  | +-foo.h
+[E     C  ]  | +-%(CC)s
+[E     C  ]  +-%(LINK)s
+""" % locals()
 
 test.run(arguments = "--debug=stree foo.xxx")
 test.fail_test(string.find(test.stdout(), stree) == -1)
@@ -104,11 +111,14 @@ stree2 = """
 [E     C  ]  | +-foo.c
 [E     C  ]  | +-foo.h
 [E     C  ]  | +-bar.h
+[E     C  ]  | +-%(CC)s
 [  B      ]  +-bar.ooo
-[E     C  ]    +-bar.c
-[E     C  ]    +-bar.h
-[E     C  ]    +-foo.h
-"""
+[E     C  ]  | +-bar.c
+[E     C  ]  | +-bar.h
+[E     C  ]  | +-foo.h
+[E     C  ]  | +-%(CC)s
+[E     C  ]  +-%(LINK)s
+""" % locals()
 
 test.run(arguments = '-c foo.xxx')
 
