@@ -37,6 +37,10 @@ import time
 
 test = TestSCons.TestSCons()
 
+CC = test.detect('CC')
+LINK = test.detect('LINK')
+if LINK is None: LINK = CC
+
 test.write('SConstruct', """
 env = Environment(OBJSUFFIX = '.ooo', PROGSUFFIX = '.xxx')
 env.Program('Foo', Split('Foo.c Bar.c'))
@@ -82,11 +86,14 @@ tree1 = """
   | +-Foo.c
   | +-Foo.h
   | +-Bar.h
+  | +-%(CC)s
   +-Bar.ooo
-    +-Bar.c
-    +-Bar.h
-    +-Foo.h
-"""
+  | +-Bar.c
+  | +-Bar.h
+  | +-Foo.h
+  | +-%(CC)s
+  +-%(LINK)s
+""" % locals()
 
 test.run(arguments = "--debug=tree Foo.xxx")
 test.fail_test(string.find(test.stdout(), tree1) == -1)
@@ -98,22 +105,28 @@ tree2 = """
   | +-Bar.c
   | +-Bar.h
   | +-Foo.h
+  | +-%(CC)s
   +-Foo.c
   +-Foo.ooo
   | +-Foo.c
   | +-Foo.h
   | +-Bar.h
+  | +-%(CC)s
   +-Foo.xxx
   | +-Foo.ooo
   | | +-Foo.c
   | | +-Foo.h
   | | +-Bar.h
+  | | +-%(CC)s
   | +-Bar.ooo
-  |   +-Bar.c
-  |   +-Bar.h
-  |   +-Foo.h
+  | | +-Bar.c
+  | | +-Bar.h
+  | | +-Foo.h
+  | | +-%(CC)s
+  | +-%(LINK)s
   +-SConstruct
-"""
+""" % locals()
+
 test.run(arguments = "--debug=tree .")
 test.fail_test(string.find(test.stdout(), tree2) == -1)
 
